--- a/events.html
+++ b/events.html
@@ -337,9 +337,9 @@
   <body>
     <header>
       <nav>
-        <a href="home.html" class="logo">TechFest</a>
+        <a href="index.html" class="logo">TechFest</a>
         <ul class="nav-links">
-          <li><a href="home.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="events.html">Events</a></li>
           <li><a href="schedule.html">Schedule</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -394,7 +394,7 @@
         <div class="footer-section">
           <h3>Quick Links</h3>
           <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="events.html">Events</a></li>
             <li><a href="schedule.html">Schedule</a></li>
             <li><a href="contact.html">Contact</a></li>
