--- a/schedule.html
+++ b/schedule.html
@@ -299,9 +299,9 @@
   <body>
     <header>
       <nav>
-        <a href="home.html" class="logo">TechFest</a>
+        <a href="index.html" class="logo">TechFest</a>
         <ul class="nav-links">
-          <li><a href="home.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="events.html">Events</a></li>
           <li><a href="schedule.html">Schedule</a></li>
           <li><a href="contact.html">Contact</a></li>
