--- a/schedule.html
+++ b/schedule.html
@@ -47,83 +47,17 @@
         font-weight: bold;
         color: #00ffff;
       }
-      .nav-links {
+      nav ul {
         display: flex;
         list-style: none;
       }
-      .nav-links li {
+      nav ul li {
         margin-left: 1.5rem;
       }
-      .nav-links li a:hover {
-        color: #00ffff;
-      }
-      .hamburger {
-        display: none;
-        cursor: pointer;
-      }
-      .hamburger i {
-        font-size: 1.5rem;
+      nav ul li a:hover {
         color: #00ffff;
       }
 
-      /* Responsive design */
-      @media (max-width: 768px) {
-        .nav-links {
-          display: none;
-          flex-direction: column;
-          width: 100%;
-          position: absolute;
-          top: 100%;
-          left: 0;
-          background-color: rgba(18, 18, 18, 0.9);
-          backdrop-filter: blur(10px);
-        }
-        .nav-links li {
-          margin: 1rem 0;
-          text-align: center;
-        }
-        .hamburger {
-          display: block;
-        }
-        .nav-active {
-          display: flex !important;
-        }
-      }
-
-
-      /* Hero section styles */
-      .hero {
-        height: 70vh;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        position: relative;
-        overflow: hidden;
-      }
-      .hero::before {
-        content: "";
-        position: absolute;
-        top: -50%;
-        left: -50%;
-        width: 200%;
-        height: 200%;
-        background: radial-gradient(
-          circle,
-          rgba(209, 237, 237, 0.1) 0%,
-          rgba(1, 44, 44, 0) 70%
-        );
-        animation: rotate 10s linear infinite;
-      }
-      @keyframes rotate {
-        0% {
-          transform: rotate(0deg);
-        }
-        100% {
-          transform: rotate(360deg);
-        }
-      }
       /* Hero section styles */
       .hero {
         height: 60vh;
@@ -260,7 +194,7 @@
       canvas {
         display: block;
       }
-      o-slider {
+      #hero-slider {
         position: absolute;
         top: 50%;
         left: 50%;
@@ -299,17 +233,14 @@
   <body>
     <header>
       <nav>
-        <a href="index.html" class="logo">TechFest</a>
-        <ul class="nav-links">
-          <li><a href="index.html">Home</a></li>
+        <a href="home.html" class="logo">TechFest</a>
+        <ul>
+          <li><a href="home.html">Home</a></li>
           <li><a href="events.html">Events</a></li>
           <li><a href="schedule.html">Schedule</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li><a href="results.html">Results</a></li>
         </ul>
-        <div class="hamburger">
-          <i class="fas fa-bars"></i>
-        </div>
       </nav>
     </header>
 
@@ -607,13 +538,5 @@
         mouse.y = -(event.clientY / window.innerHeight) * 2 + 1;
       });
     </script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>    
-    <script>
-          $(document).ready(function () {
-            $(".hamburger").click(function () {
-              $(".nav-links").toggleClass("nav-active");
-            });
-          });
-        </script>
   </body>
 </html>
