--- a/hackathon.html
+++ b/hackathon.html
@@ -90,7 +90,7 @@
             <p>Get ready for 48 hours of coding, collaboration, and creativity in our thrilling Hackathon event. This competition brings together developers, designers, and innovators to tackle real-world challenges through technology.</p>
             <p>With opportunities for networking, teamwork, and showcasing your coding skills, the Hackathon offers a platform to create cutting-edge solutions that could shape the future. Are you up for the challenge?</p>
         </div>
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfVCXXPGtxWOgqOkHqvOWkFJDQA_FYJeHDQB4OlWZzNDwh-Ug/viewform?usp=sf_link" class="register-button" target="_blank">Register Now</a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfjnnXWM2n5BYS9aU_nWZ3NEEKCiEj8LevZtKT2pwDv42ZrUg/viewform" class="register-button" target="_blank">Register Now</a>
     </div>
 </body>
 </html>
