--- a/robowars.html
+++ b/robowars.html
@@ -90,7 +90,7 @@
             <p>Experience the ultimate test of engineering and strategy in Robowars. Teams will build and battle robots in a high-stakes, action-packed competition. With a variety of obstacles and challenges, your robot's endurance, power, and control will be pushed to the limit.</p>
             <p>Whether you're a seasoned builder or a newcomer, this event offers an exhilarating experience for all participants and spectators alike. Do you have what it takes to claim the championship title?</p>
         </div>
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfVCXXPGtxWOgqOkHqvOWkFJDQA_FYJeHDQB4OlWZzNDwh-Ug/viewform?usp=sf_link" class="register-button" target="_blank">Register Now</a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfjnnXWM2n5BYS9aU_nWZ3NEEKCiEj8LevZtKT2pwDv42ZrUg/viewform" class="register-button" target="_blank">Register Now</a>
     </div>
 </body>
 </html>
