--- a/techexpo.html
+++ b/techexpo.html
@@ -78,7 +78,7 @@
         <p>
             Showcase your innovations and connect with industry leaders. The Tech Expo is your opportunity to display your projects, network with professionals, and potentially find investors for your ideas.
         </p>
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfVCXXPGtxWOgqOkHqvOWkFJDQA_FYJeHDQB4OlWZzNDwh-Ug/viewform?usp=sf_link" class="register-button" target="_blank">Register Now</a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfjnnXWM2n5BYS9aU_nWZ3NEEKCiEj8LevZtKT2pwDv42ZrUg/viewform" class="register-button" target="_blank">Register Now</a>
     </div>
 </body>
 </html>
