--- a/schedule.html
+++ b/schedule.html
@@ -47,15 +47,47 @@
         font-weight: bold;
         color: #00ffff;
       }
-      nav ul {
+      .nav-links {
         display: flex;
         list-style: none;
       }
-      nav ul li {
+      .nav-links li {
         margin-left: 1.5rem;
       }
-      nav ul li a:hover {
+      .nav-links li a:hover {
         color: #00ffff;
+      }
+      .hamburger {
+        display: none;
+        cursor: pointer;
+      }
+      .hamburger i {
+        font-size: 1.5rem;
+        color: #00ffff;
+      }
+
+      /* Responsive design */
+      @media (max-width: 768px) {
+        .nav-links {
+          display: none;
+          flex-direction: column;
+          width: 100%;
+          position: absolute;
+          top: 100%;
+          left: 0;
+          background-color: rgba(18, 18, 18, 0.9);
+          backdrop-filter: blur(10px);
+        }
+        .nav-links li {
+          margin: 1rem 0;
+          text-align: center;
+        }
+        .hamburger {
+          display: block;
+        }
+        .nav-active {
+          display: flex !important;
+        }
       }
 
       /* Hero section styles */
@@ -233,14 +265,17 @@
   <body>
     <header>
       <nav>
-        <a href="home.html" class="logo">TechFest</a>
-        <ul>
-          <li><a href="home.html">Home</a></li>
+        <a href="index.html" class="logo">TechFest</a>
+        <ul class="nav-links">
+          <li><a href="index.html">Home</a></li>
           <li><a href="events.html">Events</a></li>
           <li><a href="schedule.html">Schedule</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li><a href="results.html">Results</a></li>
         </ul>
+        <div class="hamburger">
+          <i class="fas fa-bars"></i>
+        </div>
       </nav>
     </header>
 
@@ -537,6 +572,14 @@
         mouse.x = (event.clientX / window.innerWidth) * 2 - 1;
         mouse.y = -(event.clientY / window.innerHeight) * 2 + 1;
       });
+      <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>    
+    <script>
+          $(document).ready(function () {
+            $(".hamburger").click(function () {
+              $(".nav-links").toggleClass("nav-active");
+            });
+          });
+        </script>
     </script>
   </body>
 </html>
