--- a/about.html
+++ b/about.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>About TechFest 2024</title>
     <script
       src="https://kit.fontawesome.com/a54b9f4df2.js"
       crossorigin="anonymous"
     ></script>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TechFest 2024 - Schedule</title>
     <style>
       /* Reset and base styles */
       * {
@@ -16,7 +16,7 @@
         box-sizing: border-box;
       }
       body {
-        font-family: "Arial", sans-serif;
+        font-family: Arial, sans-serif;
         line-height: 1.6;
         color: #ffffff;
         background-color: #121212;
@@ -66,30 +66,6 @@
         color: #00ffff;
       }
 
-      /* Responsive design */
-      @media (max-width: 768px) {
-        .nav-links {
-          display: none;
-          flex-direction: column;
-          width: 100%;
-          position: absolute;
-          top: 100%;
-          left: 0;
-          background-color: rgba(18, 18, 18, 0.9);
-          backdrop-filter: blur(10px);
-        }
-        .nav-links li {
-          margin: 1rem 0;
-          text-align: center;
-        }
-        .hamburger {
-          display: block;
-        }
-        .nav-active {
-          display: flex !important;
-        }
-      }
-
       /* Hero section styles */
       .hero {
         height: 60vh;
@@ -134,46 +110,68 @@
         z-index: 1;
       }
 
-      /* Schedule styles */
-      .schedule {
-        background-color: #1a1a1a;
-        padding: 4rem 5%;
-      }
-      .schedule h2 {
-        font-size: 2.5rem;
-        margin-bottom: 2rem;
+      #hero-slider {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         text-align: center;
-        color: #00ffff;
-      }
-      .schedule-table {
+        z-index: 1;
+        padding: 3rem 0 0;
         width: 100%;
-        border-collapse: collapse;
-        margin-top: 2rem;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
       }
-      .schedule-table th,
-      .schedule-table td {
-        border: 1px solid #333;
-        padding: 1rem;
-        text-align: left;
+
+      #hero-slider p:nth-child(2) {
+        animation-delay: 5s;
       }
-      .schedule-table th {
-        background-color: #2a2a2a;
+
+      #hero-slider p:nth-child(3) {
+        animation-delay: 10s;
+      }
+
+      @keyframes slide-up {
+        0%,
+        95%,
+        100% {
+          transform: translateY(100%);
+        }
+        5%,
+        90% {
+          transform: translateY(0);
+        }
+      }
+
+      /* Main content styles */
+      main {
+        padding-top: 80px;
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 2rem;
+      }
+      .card {
+        background-color: #1a1a1a;
+        border-radius: 8px;
+        padding: 2rem;
+        margin-bottom: 2rem;
+      }
+      .card h2 {
+        font-size: 2rem;
+        margin-bottom: 1rem;
         color: #00ffff;
-        font-weight: bold;
       }
-      .schedule-table tr:nth-child(even) {
-        background-color: #222;
+      .card p {
+        margin-bottom: 1rem;
       }
-      .schedule-table tr:hover {
-        background-color: #2c2c2c;
+      .card ul {
+        list-style-type: disc;
+        margin-left: 1.5rem;
+        margin-bottom: 1rem;
       }
 
       /* Footer styles */
       footer {
         background-color: #121212;
         color: #ffffff;
-        text-align: center;
         padding: 2rem 0;
       }
       .footer-content {
@@ -200,56 +198,44 @@
       .social-icons {
         display: flex;
         gap: 1rem;
-        justify-content: center;
       }
       .social-icon {
-        display: inline-block;
-        width: 30px;
-        height: 30px;
-        background-color: #00ffff;
-        color: #121212;
-        text-align: center;
-        line-height: 30px;
-        border-radius: 50%;
-        font-size: 0.8rem;
-        font-weight: bold;
-        transition: background-color 0.3s;
-      }
-      .social-icon:hover {
-        background-color: #00cccc;
+        font-size: 1.5rem;
       }
       .footer-bottom {
+        text-align: center;
         margin-top: 2rem;
         padding-top: 1rem;
         border-top: 1px solid #333;
       }
-      canvas {
-        display: block;
-      }
-      #hero-slider {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        text-align: center;
-        z-index: 1;
-        padding: 3rem 0 0;
-      }
+
       /* Responsive design */
       @media (max-width: 768px) {
+        .nav-links {
+          display: none;
+          flex-direction: column;
+          width: 100%;
+          position: absolute;
+          top: 100%;
+          left: 0;
+          background-color: rgba(18, 18, 18, 0.9);
+          backdrop-filter: blur(10px);
+        }
+        .nav-links li {
+          margin: 1rem 0;
+          text-align: center;
+        }
+        .hamburger {
+          display: block;
+        }
+        .nav-active {
+          display: flex;
+        }
         .hero h1 {
           font-size: 2.5rem;
         }
         .hero p {
           font-size: 1.2rem;
-        }
-        .schedule {
-          padding: 2rem 2%;
-        }
-        .schedule-table th,
-        .schedule-table td {
-          padding: 0.5rem;
-          font-size: 0.9rem;
         }
         .footer-content {
           flex-direction: column;
@@ -283,74 +269,98 @@
     <main>
       <section class="hero">
         <canvas id="dotsCanvas"></canvas>
-        <section id="hero-slider">
-          <h1>TechFest 2024 Schedule</h1>
-          <p>Plan your TechFest experience</p>
-        </section>
+        <div id="hero-slider">
+          <h1>About TechFest 2024</h1>
+          <p>Discover the future of technology</p>
+        </div>
       </section>
 
-      <section class="schedule">
-        <h2>Event Schedule</h2>
-        <table class="schedule-table">
-          <thead>
-            <tr>
-              <th>Date</th>
-              <th>Time</th>
-              <th>Event</th>
-              <th>Venue</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Sept 27, 2024</td>
-              <td>09:00 AM - 10:00 AM</td>
-              <td>Opening Ceremony</td>
-              <td>Main Arena</td>
-            </tr>
-            <tr>
-              <td>Sept 27, 2024</td>
-              <td>10:30 AM - 06:00 PM</td>
-              <td>Robowars - Preliminary Rounds</td>
-              <td>Main Arena</td>
-            </tr>
-            <tr>
-              <td>Sept 28, 2024</td>
-              <td>09:00 AM - 09:00 AM (Next day)</td>
-              <td>Hackathon Begins</td>
-              <td>Innovation Hub</td>
-            </tr>
-            <tr>
-              <td>Sept 28, 2024</td>
-              <td>10:00 AM - 06:00 PM</td>
-              <td>Robowars - Final Rounds</td>
-              <td>Main Arena</td>
-            </tr>
-            <tr>
-              <td>Sept 29, 2024</td>
-              <td>10:00 AM - 06:00 PM</td>
-              <td>Tech Expo - Day 1</td>
-              <td>Exhibition Hall</td>
-            </tr>
-            <tr>
-              <td>Sept 30, 2024</td>
-              <td>09:00 AM - 12:00 PM</td>
-              <td>Hackathon Presentations</td>
-              <td>Innovation Hub</td>
-            </tr>
-            <tr>
-              <td>Sept 30, 2024</td>
-              <td>10:00 AM - 04:00 PM</td>
-              <td>Tech Expo - Day 2</td>
-              <td>Exhibition Hall</td>
-            </tr>
-            <tr>
-              <td>Sept 30, 2024</td>
-              <td>05:00 PM - 07:00 PM</td>
-              <td>Closing Ceremony & Awards</td>
-              <td>Main Arena</td>
-            </tr>
-          </tbody>
-        </table>
+      <section class="content">
+        <div class="card">
+          <h2>Our Mission</h2>
+          <p>
+            TechFest 2024 aims to bring together the brightest minds in
+            technology, fostering innovation, collaboration, and learning. We
+            provide a platform for students, professionals, and tech enthusiasts
+            to showcase their skills, exchange ideas, and push the boundaries of
+            what's possible in the world of technology.
+          </p>
+          <p>
+            Our event features cutting-edge competitions, workshops, and
+            exhibitions covering various fields such as artificial intelligence,
+            robotics, cybersecurity, and sustainable technology. By bringing
+            together industry leaders, academic experts, and passionate
+            participants, we create an environment that sparks creativity and
+            drives technological advancement.
+          </p>
+        </div>
+
+        <div class="card">
+          <h2>Event Highlights</h2>
+          <ul>
+            <li>
+              <strong>Robowars: Battle of the Bots</strong> - Witness epic
+              battles between custom-built robots in this high-octane
+              competition.
+            </li>
+            <li>
+              <strong>24-Hour Hackathon</strong> - Push your coding skills to
+              the limit as you develop innovative solutions to real-world
+              problems.
+            </li>
+            <li>
+              <strong>Tech Expo: Showcasing Innovations</strong> - Explore
+              groundbreaking projects and prototypes from talented individuals
+              and teams.
+            </li>
+            <li>
+              <strong>AI and Machine Learning Workshops</strong> - Learn from
+              industry experts and gain hands-on experience with cutting-edge AI
+              technologies.
+            </li>
+            <li>
+              <strong>Cybersecurity Challenge</strong> - Test your skills in
+              ethical hacking and network defense in our immersive cybersecurity
+              scenarios.
+            </li>
+          </ul>
+          <p>
+            Our events are designed to challenge participants, encourage
+            teamwork, and showcase the latest technological advancements. From
+            intense robot battles to marathon coding sessions, TechFest 2024
+            offers something for every tech enthusiast. Attendees will have the
+            opportunity to learn from industry experts, network with like-minded
+            individuals, and potentially kickstart their careers in the tech
+            industry.
+          </p>
+        </div>
+
+        <div class="card">
+          <h2>Why Attend TechFest 2024?</h2>
+          <ul>
+            <li>
+              Gain exposure to cutting-edge technologies and industry trends
+            </li>
+            <li>
+              Network with industry professionals, academic experts, and fellow
+              tech enthusiasts
+            </li>
+            <li>
+              Participate in challenging competitions with attractive prizes
+            </li>
+            <li>
+              Attend workshops and seminars to enhance your skills and knowledge
+            </li>
+            <li>Showcase your projects and ideas to a wide audience</li>
+            <li>Explore career opportunities with leading tech companies</li>
+          </ul>
+          <p>
+            Join us at TechFest 2024 and be part of the most exciting tech event
+            of the year. Whether you're a student, professional, or simply
+            passionate about technology, TechFest has something for you. Get
+            ready to innovate, collaborate, and elevate your tech journey!
+          </p>
+        </div>
       </section>
     </main>
 
@@ -371,22 +381,22 @@
           <h3>Follow Us</h3>
           <div class="social-icons">
             <a href="https://www.facebook.com/gecvirubbsr" class="social-icon"
-              ><i class="fa-brands fa-facebook"></i
+              ><i class="fab fa-facebook"></i
             ></a>
             <a
               href="https://x.com/gecbbsrofficial?t=BXxV0QEkKDJCcuOXQbjWpQ&s=08"
               class="social-icon"
-              ><i class="fa-brands fa-x-twitter"></i
+              ><i class="fab fa-twitter"></i
             ></a>
             <a
               href="https://www.instagram.com/gecbbsrofficial?igsh=MTQ5dWlyMmNwb2trNA=="
               class="social-icon"
-              ><i class="fa-brands fa-instagram"></i
+              ><i class="fab fa-instagram"></i
             ></a>
             <a
               href="https://www.linkedin.com/school/gandhi-engineering-college-gec-bhubaneswar/"
               class="social-icon"
-              ><i class="fa-brands fa-linkedin"></i
+              ><i class="fab fa-linkedin"></i
             ></a>
           </div>
         </div>
@@ -400,8 +410,9 @@
         <p>&copy; 2024 TechFest. All rights reserved.</p>
       </div>
     </footer>
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
     <script>
+      // Canvas background
       const canvas = document.getElementById("dotsCanvas");
       const ctx = canvas.getContext("2d");
       let dots = [];
@@ -491,97 +502,14 @@
 
       init();
       animate();
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script>
-      // Three.js implementation for dynamic 3D background
-      let scene, camera, renderer, stars, starGeo;
-      const mouse = { x: 0, y: 0 };
 
-      function init() {
-        const canvas = document.getElementById("dotsCanvas");
-        renderer = new THREE.WebGLRenderer({ canvas: canvas });
-        renderer.setSize(window.innerWidth, window.innerHeight);
+      // Navigation toggle
+      const hamburger = document.querySelector(".hamburger");
+      const navLinks = document.querySelector(".nav-links");
 
-        scene = new THREE.Scene();
-        camera = new THREE.PerspectiveCamera(
-          60,
-          window.innerWidth / window.innerHeight,
-          1,
-          1000
-        );
-        camera.position.z = 1;
-        camera.rotation.x = Math.PI / 2;
-
-        starGeo = new THREE.Geometry();
-        for (let i = 0; i < 6000; i++) {
-          let star = new THREE.Vector3(
-            Math.random() * 600 - 300,
-            Math.random() * 600 - 300,
-            Math.random() * 600 - 300
-          );
-          star.velocity = 0;
-          star.acceleration = 0.02;
-          starGeo.vertices.push(star);
-        }
-
-        let sprite = new THREE.TextureLoader().load(
-          "https://threejsfundamentals.org/threejs/resources/images/star.png"
-        );
-        let starMaterial = new THREE.PointsMaterial({
-          color: 0xaaaaaa,
-          size: 0.7,
-          map: sprite,
-        });
-
-        stars = new THREE.Points(starGeo, starMaterial);
-        scene.add(stars);
-
-        animate();
-      }
-
-      function animate() {
-        starGeo.vertices.forEach((p) => {
-          p.velocity += p.acceleration;
-          p.y -= p.velocity;
-
-          if (p.y < -200) {
-            p.y = 200;
-            p.velocity = 0;
-          }
-
-          // Update position based on mouse movement
-          p.x += (mouse.x - p.x) * 0.05;
-          p.y += (mouse.y - p.y) * 0.05;
-        });
-        starGeo.verticesNeedUpdate = true;
-        stars.rotation.y += 0.002;
-
-        renderer.render(scene, camera);
-        requestAnimationFrame(animate);
-      }
-
-      init();
-
-      window.addEventListener("resize", () => {
-        renderer.setSize(window.innerWidth, window.innerHeight);
-        camera.aspect = window.innerWidth / window.innerHeight;
-        camera.updateProjectionMatrix();
+      hamburger.addEventListener("click", () => {
+        navLinks.classList.toggle("nav-active");
       });
-
-      // Track mouse movement
-      window.addEventListener("mousemove", (event) => {
-        mouse.x = (event.clientX / window.innerWidth) * 2 - 1;
-        mouse.y = -(event.clientY / window.innerHeight) * 2 + 1;
-      });
-      <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>    
-    <script>
-          $(document).ready(function () {
-            $(".hamburger").click(function () {
-              $(".nav-links").toggleClass("nav-active");
-            });
-          });
-        </script>
     </script>
   </body>
 </html>
