--- a/contact.html
+++ b/contact.html
@@ -322,6 +322,7 @@
         <a href="index.html" class="logo">TechFest</a>
         <ul class="nav-links">
           <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
           <li><a href="events.html">Events</a></li>
           <li><a href="schedule.html">Schedule</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -375,6 +376,7 @@
           <h3>Quick Links</h3>
           <ul>
             <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="events.html">Events</a></li>
             <li><a href="schedule.html">Schedule</a></li>
             <li><a href="contact.html">Contact</a></li>
