--- a/events.html
+++ b/events.html
@@ -340,6 +340,7 @@
         <a href="index.html" class="logo">TechFest</a>
         <ul class="nav-links">
           <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
           <li><a href="events.html">Events</a></li>
           <li><a href="schedule.html">Schedule</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -395,6 +396,7 @@
           <h3>Quick Links</h3>
           <ul>
             <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="events.html">Events</a></li>
             <li><a href="schedule.html">Schedule</a></li>
             <li><a href="contact.html">Contact</a></li>
