--- a/index.html
+++ b/index.html
@@ -631,6 +631,7 @@
         <a href="index.html" class="logo">TechFest</a>
         <ul class="nav-links">
           <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
           <li><a href="events.html">Events</a></li>
           <li><a href="schedule.html">Schedule</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -727,6 +728,7 @@
           <div class="footer-section">
             <h3>Quick Links</h3>
             <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="events.html">Events</a></li>
             <li><a href="schedule.html">Schedule</a></li>
             <li><a href="contact.html">Contact</a></li>
