--- a/robowars.html
+++ b/robowars.html
@@ -50,7 +50,7 @@
         }
         .register-button {
             display: block;
-            width: 100%;
+            width: 96%;
             margin-top: 2rem;
             padding: 1rem;
             background-color: #00ffff;
@@ -183,7 +183,7 @@
 
         function goBack() {
             // Replace 'event-page.html' with the actual URL of your event page
-            window.location.href = 'events.html';
+            window.location.href = 'event.html';
         }
 
         // Add hover effect to the register button
