--- a/robowars.html
+++ b/robowars.html
@@ -18,6 +18,7 @@
             background-color: #1a1a1a;
             border-radius: 8px;
             position: relative;
+            animation: fadeIn 0.5s ease-in-out;
         }
         h1 {
             color: #00ffff;
@@ -93,46 +94,24 @@
         .close-button::after {
             transform: rotate(-45deg);
         }
-        .popup {
-            display: none;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: #1a1a1a;
-            padding: 2rem;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.5);
-            z-index: 1000;
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
         }
-        .popup-content {
-            text-align: center;
-        }
-        .popup-buttons {
-            margin-top: 1rem;
-        }
-        .popup-button {
-            margin: 0 0.5rem;
-            padding: 0.5rem 1rem;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        .overlay {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0,0,0,0.5);
-            z-index: 999;
+        @media (max-width: 768px) {
+            .container {
+                margin: 1rem;
+                padding: 0.5rem;
+            }
+            .event-image {
+                height: 200px;
+            }
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <button class="close-button" onclick="showPopup()"></button>
+        <button class="close-button" onclick="goBack()"></button>
         <h1>Robowars</h1>
         <div class="event-image">
             <img src="image/robowars.jpeg" alt="Robowars Image">
@@ -158,52 +137,10 @@
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfjnnXWM2n5BYS9aU_nWZ3NEEKCiEj8LevZtKT2pwDv42ZrUg/viewform" class="register-button" target="_blank">Register Now</a>
     </div>
 
-    <div class="overlay" id="overlay"></div>
-    <div class="popup" id="popup">
-        <div class="popup-content">
-            <h2>Are you sure you want to leave?</h2>
-            <p>You will be redirected to the event page.</p>
-            <div class="popup-buttons">
-                <button class="popup-button" onclick="goBack()">Yes, leave</button>
-                <button class="popup-button" onclick="hidePopup()">No, stay here</button>
-            </div>
-        </div>
-    </div>
-
     <script>
-        function showPopup() {
-            document.getElementById('overlay').style.display = 'block';
-            document.getElementById('popup').style.display = 'block';
-        }
-
-        function hidePopup() {
-            document.getElementById('overlay').style.display = 'none';
-            document.getElementById('popup').style.display = 'none';
-        }
-
         function goBack() {
-            // Replace 'event-page.html' with the actual URL of your event page
-            window.location.href = 'event.html';
+            window.location.href = 'events.html';
         }
-
-        // Add hover effect to the register button
-        const registerButton = document.querySelector('.register-button');
-        registerButton.addEventListener('mouseover', () => {
-            registerButton.style.transform = 'translateY(-3px) scale(1.05)';
-        });
-        registerButton.addEventListener('mouseout', () => {
-            registerButton.style.transform = 'translateY(0) scale(1)';
-        });
-
-        // Add smooth scroll to sections
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-                document.querySelector(this.getAttribute('href')).scrollIntoView({
-                    behavior: 'smooth'
-                });
-            });
-        });
     </script>
 </body>
 </html>
