--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         font-family: "Arial", sans-serif;
         line-height: 1.6;
         color: #ffffff;
-        background-color: #0a020f;
+        background-color: #0c0113;
       }
       a {
         color: #ffffff;
