--- a/events.html
+++ b/events.html
@@ -387,6 +387,41 @@
           </div>
           <a href="techexpo.html" class="register-button">Read More</a>
         </div>
+        <!-- AI Workshop Event -->
+<div class="event" id="aiworkshop">
+    <h3>AI Workshop</h3>
+    <div class="event-image">
+      <img src="image/aiworkshop.jpeg" alt="AI Workshop Image" />
+    </div>
+    <a href="aiworkshop.html" class="register-button">Read More</a>
+  </div>
+  
+  <!-- Cybersecurity Challenge Event -->
+  <div class="event" id="cybersecurity">
+    <h3>Cybersecurity Challenge</h3>
+    <div class="event-image">
+      <img src="image/cybersecurity.jpeg" alt="Cybersecurity Challenge Image" />
+    </div>
+    <a href="cybersecurity.html" class="register-button">Read More</a>
+  </div>
+  
+  <!-- IoT Showcase Event -->
+  <div class="event" id="iotshowcase">
+    <h3>IoT Showcase</h3>
+    <div class="event-image">
+      <img src="image/iot.jpeg" alt="IoT Showcase Image" />
+    </div>
+    <a href="iotshowcase.html" class="register-button">Read More</a>
+  </div>
+  
+  <!-- VR Experience Event -->
+  <div class="event" id="vrexperience">
+    <h3>VR Experience</h3>
+    <div class="event-image">
+      <img src="image/vr.jpeg" alt="VR Experience Image" />
+    </div>
+    <a href="vrexperience.html" class="register-button">Read More</a>
+  </div>
       </section>
       
     </main>
