--- a/techexpo.html
+++ b/techexpo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hackathon - TechFest 2024</title>
+    <title>Tech Expo - TechFest 2024</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -112,27 +112,28 @@
 <body>
     <div class="container">
         <button class="close-button" onclick="goBack()"></button>
-        <h1>Hackathon</h1>
+        <h1>Tech Expo</h1>
         <div class="event-image">
-            <img src="image/hackathon.jpeg" alt="Hackathon Image">
+            <img src="image/techexpo.png" alt="Tech Expo Image">
         </div>
         <div class="event-details">
             <h2>Event Details</h2>
             <ul>
-                <li>Date: September 28-30, 2024</li>
-                <li>Venue: Innovation Hub</li>
-                <li>Team Size: 3-4 members</li>
+                <li>Date: October 7-8, 2024</li>
+                <li>Venue: Main Exhibition Hall</li>
+                <li>Time: 9 AM - 6 PM daily</li>
             </ul>
         </div>
         <div class="coordinators">
             <h2>Coordinators</h2>
-            <p><strong>Teacher Coordinator:</strong> Prof. M. Rao</p>
-            <p><strong>Student Coordinator:</strong> John Doe</p>
+            <p><strong>Teacher Coordinator:</strong> Prof. James Wilson</p>
+            <p><strong>Student Coordinator:</strong> Sophia Rodriguez</p>
         </div>
         <div class="description">
             <h2>Description</h2>
-            <p>Get ready for 48 hours of coding, collaboration, and creativity in our thrilling Hackathon event. This competition brings together developers, designers, and innovators to tackle real-world challenges through technology.</p>
-            <p>With opportunities for networking, teamwork, and showcasing your coding skills, the Hackathon offers a platform to create cutting-edge solutions that could shape the future. Are you up for the challenge?</p>
+            <p>Welcome to the Tech Expo, the flagship event of TechFest 2024! This two-day exhibition showcases cutting-edge technologies, innovative projects, and groundbreaking research from students, faculty, and industry partners.</p>
+            <p>Visitors will have the opportunity to explore a wide range of tech demonstrations, attend insightful presentations, and engage with the brilliant minds behind the latest technological advancements. From AI and robotics to sustainable tech and beyond, the Tech Expo offers a glimpse into the future of technology.</p>
+            <p>Don't miss this chance to network with industry professionals, discover potential career opportunities, and be inspired by the incredible possibilities that technology brings to our world!</p>
         </div>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfjnnXWM2n5BYS9aU_nWZ3NEEKCiEj8LevZtKT2pwDv42ZrUg/viewform" class="register-button" target="_blank">Register Now</a>
     </div>
